--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 .main-container {
   border : 1px solid white; 
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   text-align: center;
   position : absolute ; 
   top : 50%;
@@ -22,17 +23,31 @@ body {
   height : 80vh; 
 }
 
+.input-area {
+  position : relative; 
+}
+
+.input-area input {
+  width : 50% ; 
+}
+
+#delete-all {
+  position : absolute; 
+  right : 0; 
+}
+
 .tab-area {
   display : flex; 
   justify-content: space-around;
   border : 1px solid white; 
+  position : relative
 }
 
 .tab-area div {
   cursor: pointer;
 }
 
-.task-area {
+.tab-task-area {
   margin : 20px 0 0; 
 }
 
@@ -42,3 +57,25 @@ body {
   padding : 0.5rem; 
   border-bottom: 1px solid white;
 }
+
+#under-line {
+  height : 4px;
+  background-color: white; 
+  position: absolute;
+  width : 33%; 
+  left : 0px; 
+  top: 22px; 
+  padding : 0px; 
+}
+
+/* 모바일 */
+@media screen and (max-width : 480px){
+  body {
+    font-size : 0.9rem; 
+  }
+
+  #under-line {
+    top : 20px; 
+  }
+}
+
