--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 body {
   margin : 0; 
   font-family : 'NanumSquare', sans-serif;
-  background-image: url("./images/background-basic.jpg"); 
+  background-image: url("./images/background-pink.jpeg"); 
   min-height : 100vh; 
   color : white; 
 }
 
 .main-container {
   border : 1px solid white; 
+  background-color: palevioletred; 
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   text-align: center;
   position : absolute ; 
