--- a/style.css
+++ b/style.css
@@ -5,36 +5,57 @@
 body {
   margin : 0; 
   font-family : 'NanumSquare', sans-serif;
-  background-image: url("./images/background-pink.jpeg"); 
+  background-image: url("./images/background-black.jpg"); 
   min-height : 100vh; 
   color : white; 
+  font-weight: bolder;
 }
 
 .main-container {
   border : 1px solid white; 
-  background-color: palevioletred; 
+  background-color: black; 
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  text-align: center;
   position : absolute ; 
   top : 50%;
   left : 50%;
   transform : translate(-50%, -50%);
-  padding : 15px; 
-  width : 80vw ; 
-  height : 80vh; 
+  padding : 30px;  
+  width : 80vw; 
+  min-height : 80vh;  
+  border-radius : 20px; 
+}
+
+h1 {
+  margin : 0 0 30px; 
 }
 
 .input-area {
   position : relative; 
+  margin : 0 0 30px; 
+}
+
+.input-area button {
+  background: transparent;
+  color : white; 
+  border : 1px solid white; 
+  font-weight: bolder; 
+  height : 2rem; 
+  margin : 0 5px; 
+
+}
+
+.input-area button:hover {
+  transform: scale(1.05);
 }
 
 .input-area input {
   width : 50% ; 
+  border : none;
+  height : 2rem; 
 }
 
-#delete-all {
-  position : absolute; 
-  right : 0; 
+#add-button {
+  margin-left : 10px; 
 }
 
 .tab-area {
@@ -72,7 +93,7 @@ body {
 /* 모바일 */
 @media screen and (max-width : 480px){
   body {
-    font-size : 0.9rem; 
+    font-size : 0.5em; 
   }
 
   #under-line {
