--- a/style.css
+++ b/style.css
@@ -105,3 +105,11 @@ h1 {
   text-decoration : line-through; 
 }
 
+.task-grey {
+  background-color : grey; 
+  display : flex;
+  justify-content: space-between;
+  padding : 0.5rem; 
+  border-bottom: 1px solid white;
+}
+
