--- a/style.css
+++ b/style.css
@@ -98,6 +98,11 @@ h1 {
 
   #under-line {
     top : 20px; 
+    height : 3px;
+    background-color: white; 
+    position: absolute;
+    width : 33%; 
+    top: 13px; 
   }
 }
 
