--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@ h1 {
 
 .input-area {
   position : relative; 
-  margin : 0 0 30px; 
+  margin : 0 0 20px; 
   height : 1.5rem; 
+  display : flex; 
 }
 
 .input-area button {
@@ -42,6 +43,7 @@ h1 {
   color : white; 
   background-color: transparent;
   border : none; 
+  height : 100%; 
 }
 
 .input-area button:hover {
@@ -54,6 +56,7 @@ h1 {
   padding : 0 0 0 10px; 
   flex-grow: 1;
   box-sizing : border-box ; 
+  height : 100%; 
 }
 
 #add-button {
