--- a/style.css
+++ b/style.css
@@ -123,3 +123,15 @@ h1 {
   border-bottom: 1px solid white;
 }
 
+.done-button {
+  background : transparent; 
+  color : white; 
+  border : none
+}
+
+.delete-button {
+  background : transparent; 
+  color : white; 
+  border : none
+}
+
