Design: 노트북 화면 미디어쿼리 조정

--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ h1 {
   height : 2px;
   background-color: snow;
   position: absolute;
-  width : 6%;  
-  left : 2px; 
+  width : 53px;  
+  left : 7px; 
   top: 29px; 
   padding : 0px; 
 }
