--- a/style.css
+++ b/style.css
@@ -19,7 +19,10 @@ body {
 }
 
 .headline-container button {
-  height : 70%; /* 버튼 높이 지정 */  
+  height : 70%;  /* 버튼 높이 지정 */  
+  background : none; 
+  color : white; 
+  border : none; 
 }
 
 .main-container {
@@ -145,7 +148,7 @@ h1 {
   top: 0; 
   width : 100%;
   height : 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
 
   /* 자식 요소 배치 */
   display : flex;
@@ -159,8 +162,8 @@ h1 {
   background-color: white;
   color : black; 
   width : 300px; 
-  height : 200px; 
-  padding: 15px;
+  height : 150px; 
+  border-radius : 20px; 
 }
 
 #modal-container.hidden {
@@ -180,6 +183,8 @@ h1 {
   width : 50%; 
   white-space : nowrap; /*줄바꿈 장지*/ 
   margin : 10px; 
+  border-radius : 20px; 
+
 }
 
 #modal-close {
