--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
   transform : translate(-50%, -50%);
   padding : 30px;  
   width : 90vw; 
-  min-height : 90vh;  
+  min-height : 85vh;  
   border-radius : 20px; 
 }
 
@@ -113,7 +113,7 @@ h1 {
 /* 모바일 */
 @media screen and (max-width : 480px){
   body {
-    font-size : 10px; 
+    font-size : 0.8rem; 
   }
 }
 
@@ -157,13 +157,18 @@ h1 {
 }
 
 #modal {
-  position : absolute;
+  position : absolute;  
   text-align: center;
   background-color: white;
   color : black; 
-  width : 300px; 
+  width : 250px; 
   height : 150px; 
-  border-radius : 20px; 
+  border-radius : 10px; 
+}
+
+#modal-close {
+  background : none; 
+  border : none;
 }
 
 #modal-container.hidden {
@@ -172,18 +177,19 @@ h1 {
 
 .modal-content {
   position : absolute;
-  top : 50%;
+  top : 55%;
   left : 50%; 
   transform: translate(-50%, -50%);
   display : flex; 
   align-items: center;
+  font-size : 1.1rem; 
 }
 
 .modal-content button {
   width : 50%; 
   white-space : nowrap; /*줄바꿈 장지*/ 
-  margin : 10px; 
-  border-radius : 20px; 
+  margin : 15px 0 0 0 ; 
+  border-radius : 10px; 
 
 }
 
